# ABY

./: 10_bio_b_estimated_costtable.json  20_bio_b_estimated_costtable.json  50_bio_b_estimated_costtable.json  actual_costtable.py  bio_b_costtable.json  bio_b_real_cost.txt  bio_b_real_costtable.json  bio_circ.txt  circ_org.py  cost_table.py  gates.json  schedule.json
src/examples/: CMakeLists.txt
src/examples/1add_1mul/: 1add_1mul_test.cpp  CMakeLists.txt
src/examples/1add_1mul/common/: 1add_1mul.cpp  1add_1mul.h
src/examples/1add_1mul_1and/: CMakeLists.txt
src/examples/1add_1mul_1and/common/: 1add_1mul_1and.cpp
src/examples/1and_b2y_1mul/: CMakeLists.txt
src/examples/1and_b2y_1mul/common/: 1and_b2y_1mul.cpp
src/examples/1and_y2b_1mul/: CMakeLists.txt
src/examples/1and_y2b_1mul/common/: 1and_y2b_1mul.cpp
src/examples/1mul_1add/: 1mul_1add_test.cpp  CMakeLists.txt
src/examples/1mul_1add/common/: 1mul_1add.cpp
src/examples/1mul_1and_v1/: CMakeLists.txt
src/examples/1mul_1and_v1/common/: 1mul_1and_v1.cpp
src/examples/1mul_1and_v2/: CMakeLists.txt  common_main.cpp
src/examples/1mul_1and_v2/common/: 1mul_1and_v2.cpp
src/examples/1mul_a2b_1and/: CMakeLists.txt
src/examples/1mul_a2b_1and/common/: 1mul_1and_v3.cpp  1mul_a2b_1and.cpp  common.h
src/examples/1mul_a2y_1and/: CMakeLists.txt
src/examples/1mul_a2y_1and/common/: 1mul_a2y_1and.cpp
src/examples/1mul_b2y_1and/: CMakeLists.txt
src/examples/1mul_y2b_1and/: CMakeLists.txt
src/examples/biometric/: CMakeLists.txt  biometric.cpp
src/examples/biometric_a2y/: CMakeLists.txt  biometric_a2y.cpp
src/examples/microbench/: CMakeLists.txt
src/examples/millionaire_prob/: CMakeLists.txt
src/examples/min-euclidean-dist/: CMakeLists.txt
(+121 files in other folders)
