# add_subdirectory(aes)
# add_subdirectory(bench_operations)
# add_subdirectory(euclidean_distance)
# add_subdirectory(float)
# add_subdirectory(innerproduct)
# add_subdirectory(lowmc)
# add_subdirectory(millionaire_prob)
# add_subdirectory(min-euclidean-dist)
add_subdirectory(biometric)
add_subdirectory(biometric_a2y)
add_subdirectory(1mul_1and_v1)
add_subdirectory(1mul_1and_v2)
add_subdirectory(1mul_1and_v3)
add_subdirectory(1mul_a2b_1and)
add_subdirectory(1mul_a2y_1and)
add_subdirectory(1mul_b2y_1and)
add_subdirectory(1mul_y2b_1and)
add_subdirectory(1and_b2y_1mul)
add_subdirectory(1and_y2b_1mul)
add_subdirectory(1mul_1band1yand)
# add_subdirectory(psi_2D_CH)
# add_subdirectory(psi_phasing)
# add_subdirectory(psi_scs)
# add_subdirectory(sha1)
# add_subdirectory(threshold_euclidean_dist_2d_simd)
# add_subdirectory(uc_circuit)

add_subdirectory(microbench)