add_subdirectory(add)
add_subdirectory(mul)
add_subdirectory(xor)
add_subdirectory(and)
add_subdirectory(mux)
add_subdirectory(noop)

add_subdirectory(sub)
add_subdirectory(or)
add_subdirectory(gt)
add_subdirectory(lt)
add_subdirectory(eq)
add_subdirectory(ne)
add_subdirectory(le)
add_subdirectory(ge)

add_subdirectory(conversion)
# add_subdirectory(eq)
# add_subdirectory(ge)
# add_subdirectory(gt)
# add_subdirectory(le)
# add_subdirectory(lt)
# add_subdirectory(mux)
# add_subdirectory(ne)
# add_subdirectory(or)
# add_subdirectory(rem)
# add_subdirectory(shl)
# add_subdirectory(shl-clear)
# add_subdirectory(shr)
# add_subdirectory(sub)

# The conversion instructions
# add_subdirectory(conversion)



